--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -23,7 +23,7 @@
             />
 
 
-    <ScrollView
+    <!--<ScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_below="@+id/button1"
@@ -35,7 +35,14 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/button1"
                 android:textAppearance="?android:attr/textAppearanceSmall"/>
-    </ScrollView>
+    </ScrollView>-->
+    <ListView
+            android:id="@+id/request_list"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_below="@+id/button1"
+            android:layout_marginTop="20dp"/>
+
 
 </RelativeLayout>
 
